@@ -9,6 +9,7 @@ Version CVS HEAD (?)
     dimregionchooser) so they only draw pixels in the on_draw
     method. This should make them work again in newer gtkmm 3
     environments.
+  * added support for new glibmm threads API
 
 Version 0.2.0 (2009-07-31)
 
